# platform

./: .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  pms_report.md  pms_upload_positions.csv  pyproject.toml  scp_core.db
.github/workflows/: docker-image.yml
frontend/: .env  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
reports/: lp_report.md  pm_report.md
scp_core/: config.py  requirements.txt
scp_core/accounting/: pnl.py  tax_lots.py
scp_core/analytics/: exposure.py  performance.py  risk.py
scp_core/api/: main.py
scp_core/compliance/: __init__.py  engine.py  pre_trade.py
scp_core/feeds/: celery_worker.py  lseg_fundamentals.py  pms_ingestion.py  refinitiv_feed.py
scp_core/models/: __init__.py  allocation.py  cash.py  enums.py  order.py  schemas.py
scp_core/portfolio/: execution.py  messaging.py  messaging_auto.py  tracking.py
scp_core/pricing/: adr.py  amortizing_bond.py  amortizingbond.py  ba.py  billsandbondsmodel.py  bond.py  bond_futures.py  bondfutures.py  cash.py  cb.py  cds.py  clo.py  equity.py  equity_swap.py  equityswap.py  frn.py  futures.py  generalsecurity.py  inflation_bond.py  inflationbond.py  interfaces.py  irswap.py  leveraged_etf.py  leveragedetf.py  lookthrough_security.py  lookthroughsecurity.py  options.py  preferred.py  repo.py  securitylookup.py  swaption.py  term_deposit.py  termdeposit.py  warrants.py
scp_core/schemas/: ibor.py
tests/: evaluate_pipeline.py  test_compliance.py  test_modeling.py  test_parity.py
(+51 files in other folders)
