[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scp_core"
version = "2.0.0"
description = "Modern Python backend for Sbecipher platform"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "lseg-data>=1.0.0",
    "websockets>=11.0.3",
    "asyncpg>=0.28.0",
    "alembic>=1.11.0",
    "pydantic-settings>=2.0.0",
    "weasyprint>=61.0",
    "markdown>=3.5.0",
    "Jinja2>=3.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0"
]

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "E266", "E501", "W503", "F403", "F401"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
